fix: improper line-height clipping

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -27,6 +27,7 @@ body {
   min-height: 100%;
   height: 100%;
   font-size: var(--sn-stylekit-base-font-size);
+  line-height: normal;
   margin: 0;
   color: var(--sn-stylekit-foreground-color);
   background-color: var(--sn-stylekit-background-color);
